kubernetes/apps/arr/prowlarr/app/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.iac.gg/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr-local
  namespace: arr
spec:
  hostnames: ["prowlarr.${LOCAL_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: kube-system
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prowlarr-app
          namespace: arr
          port: 9696
